// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
Array [
  <span
    className="sc-dpRLZP klRb"
  >
    Xsmall
  </span>,
  <span
    className="sc-dpRLZP gfafko"
    color="goten.100"
  >
    Xsmall
  </span>,
  <span
    className="sc-dpRLZP lmEmPg"
    color="goten.100"
  >
    Xsmall
  </span>,
]
`;

exports[`Label renders with different Icons 1`] = `
Array [
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <span
      className="sc-dpRLZP irBRpc"
      size="twoxsmall"
    >
      <span
        className="sc-jNxMLV jyUfnG"
        size="twoxsmall"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
    </span>
    <span
      className="sc-dpRLZP bLijFc"
      size="twoxsmall"
    >
      Twoxsmall
      <span
        className="sc-ctuRtO lnfntV"
        size="twoxsmall"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-dpRLZP gYkLVW"
      size="twoxsmall"
    >
      <span
        className="sc-jNxMLV jyUfnG"
        size="twoxsmall"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
      <span
        className="sc-ctuRtO lnfntV"
        size="twoxsmall"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>,
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <span
      className="sc-dpRLZP bYufpJ"
    >
      <span
        className="sc-jNxMLV koKKHf"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
    </span>
    <span
      className="sc-dpRLZP dDZSPR"
    >
      Xsmall
      <span
        className="sc-ctuRtO ldQxmw"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-dpRLZP iBlcCD"
    >
      <span
        className="sc-jNxMLV koKKHf"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
      <span
        className="sc-ctuRtO ldQxmw"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>,
]
`;

exports[`Label renders with different LetterCases 1`] = `
Array [
  <span
    className="sc-dpRLZP klRb"
  >
    Default
  </span>,
  <span
    className="sc-dpRLZP grplrA"
  >
    Lowercase
  </span>,
]
`;

exports[`Label renders with different Sizes 1`] = `
Array [
  <span
    className="sc-dpRLZP lkOzlG"
    size="twoxsmall"
  >
    Twoxsmall
  </span>,
  <span
    className="sc-dpRLZP klRb"
  >
    Xsmall
  </span>,
  <span
    className="sc-dpRLZP jtnERX"
    size="twoxsmall"
  >
    Twoxsmall
  </span>,
  <span
    className="sc-dpRLZP grplrA"
  >
    Xsmall
  </span>,
]
`;
